--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 deliver excellent operational services that answer the most challenging supply chain questions.</p>
                 <button class="btn">contact us</button>
             </div>
-            <img src="./pics/img-on-background.jpg" alt="image">
+            <img src="https://images.pexels.com/photos/7363098/pexels-photo-7363098.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="image">
         </div> 
     </header>
 
@@ -50,19 +50,19 @@
         </article>
         <div class="abt-cards">
             <div class="abt-card-item">
-                <img src="./pics/card1.jpg" alt="" class="abt-card-img">
+                <img src="https://images.pexels.com/photos/262353/pexels-photo-262353.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="" class="abt-card-img">
                 <h3>cargo</h3>
                 <p>International and local cargo anywhere in the world, safely, on time and hassle free. Our network of strong relationships with reputable well known shippers allows Transpress customers to easily obtain deep discounts across all facets of shipping from LTL to Full Truckload to Specialized freight needs.</p>
             </div>
             <div class="abt-card-item">
-                <img src="./pics/card2.jpg" alt="" class="abt-card-img">
+                <img src="https://media.istockphoto.com/id/1138429558/photo/rows-of-shelves.jpg?s=612x612&w=0&k=20&c=0E4uvaa-THb-Wj-QZKpUSPgwjfIMFW3vH7NRx1iWMIc=" alt="" class="abt-card-img">
                 <h3>warehousing</h3>
                 <p>Our global footprint and extensive network means we have facilities ready to handle your supply chain, whether at origin
                 or destination. By combining shipping with warehousing and distribution, you benefit from a seamless end-to-end solution
                 with fewer logistic service providers. Complexity is reduced, and you gain speed, control and visibility.</p>
             </div>
             <div class="abt-card-item">
-                <img src="./pics/card3.jpg" alt="" class="abt-card-img">
+                <img src="https://images.pexels.com/photos/163792/model-planes-airplanes-miniatur-wunderland-hamburg-163792.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="" class="abt-card-img">
                 <h3>destination possibilities</h3>
                 <p>Destination marketing is an essential part of the travel industry and is an approach used by everyone from large tourism
                 companies to small travel brands. By focusing on the benefits and offering of a location instead of a specific holiday
@@ -178,7 +178,7 @@
     <!---------------------------- contact us -------------------------->
     <section class="contact">
         <div class="contact-container">
-            <img src="./pics/delivery guy.jpg" alt="">
+            <img src="https://images.pexels.com/photos/4254135/pexels-photo-4254135.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
             <div class="contact-form">
                 <h2 id="contact">request a quick quote</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis quam velit ea obcaecati asperiores eum rem iusto, quis fugiat fugit.</p>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="testimonial-profile">
                     <div>
-                        <img src="./pics/testimony 1.jpg" alt="">
+                        <img src="./pics/testimony1.jpeg" alt="">
                     </div>
                     <div>
                         <h3>Olonade Abiodun</h3>
@@ -305,7 +305,7 @@
                 <!-- first -->
                 <div class="latest-news-container">
                     <div class="latest-news-container-child">
-                        <img src="./pics/new2.jpg" alt="">
+                        <img src="https://images.pexels.com/photos/4481259/pexels-photo-4481259.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
                         <h3>our warehousing services</h3>
                         <p><i class="fas fa-clock"></i> 25 may 2016</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi officiis sequi consequuntur iusto ex voluptas, cumque libero ipsam natus quasi fuga optio culpa nostrum enim cum corporis perspiciatis quod mollitia!</p>
@@ -314,7 +314,7 @@
                 <!-- second -->
                 <div class="latest-news-container">
                     <div class="latest-news-container-child">
-                        <img src="./pics/news1.jpg" alt="">
+                        <img src="https://images.pexels.com/photos/7363099/pexels-photo-7363099.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
                         <h3>road freight for warding</h3>
                         <p><i class="fas fa-clock"></i> 25 may 2016</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi officiis sequi consequuntur iusto ex voluptas, cumque libero ipsam natus quasi fuga optio culpa nostrum enim cum corporis perspiciatis quod mollitia!</p>
@@ -388,8 +388,8 @@
             <!-- third -->
             <div>
                 <h3>Transport office</h3>
-                <p><i class="fas fa-user"></i> 14 Tottenham Court, London, England</p>
-                <p><i class="fas fa-phone"></i> (102) **** ****</p>
+                <p><i class="fas fa-user"></i> Developed by Abiodun, Lagos, Nigeria.</p>
+                <p><i class="fas fa-phone"></i> (+234) **** ****</p>
                 <p><i class="fas fa-envelope"></i> info@thememove.com</p>
                 <p><i class="fas fa-clock"></i> Mon - Sat 9:00 - 18:00</p>
             </div>
